--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Connect Four</title>
     <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="Connect Four.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container" align = 'center'>
@@ -69,6 +69,6 @@
       </table>
     </div>
     <script src="JQuery.js"></script>
-    <script src="Connect Four.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
